# lambda-with-poetry

./: .gitignore  README.MD  build.sh  pyproject.toml
lambda/: lambda.py
