[tool.poetry]
name = "lambda"
version = "0.1.0"
description = ""
authors = ["Oscar Garcia <hello@ogarcia.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
